[gd_scene load_steps=9 format=3 uid="uid://bhfme4jtr7hxm"]

[ext_resource type="Script" uid="uid://blukyxbov3cah" path="res://scenes/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bq38ld4mhr5ia" path="res://scenes/error_window/error_window.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://60p30npm6kti" path="res://scenes/ad_window/ad_window.tscn" id="3_choun"]
[ext_resource type="Texture2D" uid="uid://dojxsqn2mqxub" path="res://assets/EggOsDefaultWallpaper.png" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://t2pn2cpod3bc" path="res://scenes/file_explorer/file_explorer.tscn" id="3_tipki"]
[ext_resource type="PackedScene" uid="uid://dibbf0518rqt1" path="res://scenes/software_store/software_store.tscn" id="4_85g3d"]
[ext_resource type="Texture2D" uid="uid://d3rdiyojb2uu4" path="res://icon.svg" id="6_tefeu"]

[sub_resource type="LabelSettings" id="LabelSettings_85g3d"]
font_size = 51
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Control" node_paths=PackedStringArray("infection_meter")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")
popups = Array[PackedScene]([ExtResource("3_choun"), ExtResource("2_0wfyh")])
file_explorer_scene = ExtResource("3_tipki")
software_store_scene = ExtResource("4_85g3d")
infection_meter = NodePath("TaskBar/HBoxContainer/MarginContainer/InfectionMeter")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_o6xl0")
expand_mode = 2
stretch_mode = 5

[node name="WindowSpawnDelay" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AutocloseDelay" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SpawnArea" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -128.0
offset_right = 288.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0.0507812, 0.555054, 1, 1)
border_width = 4.0

[node name="TaskBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TaskBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="TaskBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="InfectionMeter" type="ProgressBar" parent="TaskBar/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 500.0

[node name="DesktopItems" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 336.0
offset_bottom = 211.0

[node name="FileExplorer" type="Button" parent="DesktopItems"]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
text = "File
Explorer"
icon = ExtResource("6_tefeu")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="SoftwareStore" type="Button" parent="DesktopItems"]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
text = "Software
Store"
icon = ExtResource("6_tefeu")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Settings" type="Button" parent="DesktopItems"]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
text = "Settings"
icon = ExtResource("6_tefeu")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="VirusPopups" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -319.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 78.0
grow_horizontal = 0
text = "Score: 00 pts"
label_settings = SubResource("LabelSettings_85g3d")

[connection signal="timeout" from="WindowSpawnDelay" to="." method="_on_window_spawn_delay_timeout"]
[connection signal="timeout" from="AutocloseDelay" to="." method="_on_autoclose_delay_timeout"]
[connection signal="pressed" from="DesktopItems/FileExplorer" to="." method="_on_file_explorer_pressed"]
[connection signal="pressed" from="DesktopItems/SoftwareStore" to="." method="_on_software_store_pressed"]
